--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "LA",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
